# xas-chip8-old

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README  README.md  SECURITY.md
.github/workflows/: rust-clippy.yml
src/: eaf.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs  platform.rs  test.xas  test.xs
src/bbu/: chip8.rs  chip8_raw.rs  mod.rs  p6502.rs
src/bbu/outs/: mod.rs  rawbin.rs
